# cuda-nn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cu
